--- a/index.html
+++ b/index.html
@@ -5,11 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>donate-today</title>
 </head>
 
 <body>
+    <section>
+        <div class="header">
+            <div class="text">
+                <h1 style="font-size:50px ;">Let's Help Those Who Are More In Need</h1>
+                <p>Since May 2022, Bangladesh has been hit with one of the worst floods in years, with
+                    millions
+                    in Sylhet
+                    and Sunamganj now homeless and without any belongings.If you would like to help with our medical
+                    response activities in Bangladesh, please donate.</p>
+                <a class="button" href="">Donate Now</a>
+
+
+            </div>
+        </div>
+    </section>
 
 </body>
 
