--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
     </section>
 
 </body>
+<footer class="footer">
+    <h3 style="color:red ;"><i>Be Humble</i></h3>
+    <p class="footer-text">I'm gonna do it</p>
+</footer>
 
 </html>
