--- a/index.html
+++ b/index.html
@@ -28,6 +28,34 @@
             </div>
         </div>
     </section>
+    <section>
+        <div style="text-align:center">
+            <h1>Donate Today</h1>
+            <p>Since May 2022, Bangladesh has been hit with one of the worst floods in years, with
+                millions
+                in Sylhet
+                and Sunamganj now homeless and without any belongings.If you would like to help with our medical
+                response activities in Bangladesh, please donate.</p>
+            <div class="display-flex  ">
+                <div class=" money-div ">
+                    <h4>100tk</h4>
+                </div>
+                <div id="div-color" class="money-div  ">
+                    <h4>200tk</h4>
+                </div>
+                <div class=" money-div ">
+                    <h4>500tk</h4>
+                </div>
+                <div class=" money-div ">
+                    <h4>1000tk</h4>
+                </div>
+                <div class="money-div  ">
+                    <h4>5000tk</h4>
+                </div>
+            </div>
+        </div>
+
+    </section>
 
 </body>
 <footer class="footer">
