--- a/index.html
+++ b/index.html
@@ -56,6 +56,22 @@
         </div>
 
     </section>
+    <section>
+        <h1 style="text-align:center ;">Get My Updates</h1>
+        <p style="text-align:center ;">Since May 2022, Bangladesh has been hit with one of the worst floods in years,
+            with
+            millions
+            in Sylhet
+            and Sunamganj now homeless and without any belongings.If you would like to help with our medical
+            response activities in Bangladesh, please donate.</p>
+        <div class="email">
+            <input type="email" name="email" id="email">
+            <input class="subscribe" type="submit" value="subscribe">
+
+
+        </div>
+
+    </section>
 
 </body>
 <footer class="footer">
