--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 in Sylhet
                 and Sunamganj now homeless and without any belongings.If you would like to help with our medical
                 response activities in Bangladesh, please donate.</p>
-            <div class="display-flex  ">
+            <div class="display-flex row ">
                 <div class=" money-div ">
                     <h4>100tk</h4>
                 </div>
@@ -55,6 +55,35 @@
             </div>
         </div>
 
+    </section>
+    <section>
+        <h1>Our Donate Plan</h1>
+        <p>Since May 2022, Bangladesh has been hit with one of the worst floods in years, with
+            millions
+            in Sylhet
+            and Sunamganj now homeless and without any belongings.If you would like to help with our medical
+            response activities in Bangladesh, please donate.</p>
+        <div class="row">
+            <div id="food" class="column">
+                <img src="icons/food.png" alt="">
+                <h3>Food for a family</h3>
+                <p>Providing food for the flood affected families.</p>
+
+            </div>
+            <div id="shelter" class="column">
+                <img src="icons/shelter.png" alt="">
+                <h3>Shelter for a family</h3>
+                <p>Providing shelter for the flood affected families.</p>
+
+            </div>
+            <div id="education" class="column">
+                <img src="icons/Frame-1.png" alt="">
+                <h3>Education for a child</h3>
+                <p>Providing education for the flood affected families.</p>
+
+            </div>
+
+        </div>
     </section>
     <section>
         <h1 style="text-align:center ;">Get My Updates</h1>
