--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
 
     </section>
     <section>
+        <div style="text-align:center ;">
+            <p>Other Amount(Taka)</p>
+            <a class="button" href="">Donate now</a>
+        </div>
+    </section>
+    <section>
         <h1>Our Donate Plan</h1>
         <p>Since May 2022, Bangladesh has been hit with one of the worst floods in years, with
             millions
