--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     </section>
     <section>
-        <div style="text-align:center">
+        <div class="text-align">
             <h1>Donate Today</h1>
             <p>Since May 2022, Bangladesh has been hit with one of the worst floods in years, with
                 millions
@@ -57,14 +57,16 @@
 
     </section>
     <section>
-        <div style="text-align:center ;">
+        <div style="text-align:center;">
             <p>Other Amount(Taka)</p>
+            <input type="text"><br><br>
             <a class="button" href="">Donate now</a>
         </div>
     </section>
     <section>
-        <h1>Our Donate Plan</h1>
-        <p>Since May 2022, Bangladesh has been hit with one of the worst floods in years, with
+        <h1 style="text-align:center;">Our Donate Plan</h1>
+        <p style="text-align:center;">Since May 2022, Bangladesh has been hit with one of the worst floods in years,
+            with
             millions
             in Sylhet
             and Sunamganj now homeless and without any belongings.If you would like to help with our medical
@@ -92,19 +94,21 @@
         </div>
     </section>
     <section>
-        <h1 style="text-align:center ;">Get My Updates</h1>
-        <p style="text-align:center ;">Since May 2022, Bangladesh has been hit with one of the worst floods in years,
+        <h1 style="text-align:center;">Get My Updates</h1>
+        <p style="text-align:center;">Since May 2022, Bangladesh has been hit with one of the worst floods in years,
             with
             millions
             in Sylhet
             and Sunamganj now homeless and without any belongings.If you would like to help with our medical
             response activities in Bangladesh, please donate.</p>
-        <div class="email">
-            <input type="email" name="email" id="email">
-            <input class="subscribe" type="submit" value="subscribe">
+        <form action="">
+            <div class="email">
+                <input type="email" name="email" id="email">
+                <input class="subscribe" type="submit" value="subscribe">
 
 
-        </div>
+            </div>
+        </form>
 
     </section>
 
