--- a/index.html
+++ b/index.html
@@ -93,6 +93,57 @@
 
         </div>
     </section>
+    <section style="width: 100%">
+        <div class="text-align">
+            <h2>Our Work</h2>
+        </div>
+        <div>
+            <div class="gallery">
+                <a target="_blank" href="images/donation9.jpg">
+                    <img src="images/donation9.jpg" alt="">
+                </a>
+
+            </div>
+            <div class="gallery">
+                <a target="_blank" href="images/donation10.jpg">
+                    <img src="images/donation10.jpg" alt="">
+                </a>
+            </div>
+            <div class="gallery">
+                <a target="_blank" href="images/donation11.jpg">
+                    <img src="images/donation11.jpg" alt="">
+                </a>
+            </div>
+            <div class="gallery">
+                <a href="images/donation1.jpg">
+                    <img src="images/donation1.jpg" alt="">
+                </a>
+
+            </div>
+            <div class="gallery">
+                <a href="images/donation5.jpg">
+                    <img src="images/donation5.jpg" alt="">
+                </a>
+
+            </div>
+            <div class="gallery">
+                <a href="images/donation7.jpg">
+                    <img src="images/donation7.jpg" alt="">
+                </a>
+
+            </div>
+
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+
+    </section>
     <section>
         <h1 style="text-align:center;">Get My Updates</h1>
         <p style="text-align:center;">Since May 2022, Bangladesh has been hit with one of the worst floods in years,
